Add database .mdf file

--- a/PeopleSearcher/PeopleSearcher.csproj
+++ b/PeopleSearcher/PeopleSearcher.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\PeopleSearcherContext-20190606202619.mdf" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
@@ -195,9 +196,7 @@
     <Content Include="Welcome.css" />
     <Content Include="Welcome.html" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
